src/styl/video-overlay-ctav2.styl
@import "video-overlay.styl";

#video-overlay {
  .call-button-ctav2 {
    transform: translateX(160%);
    transition: transform .3s ease-in;
  }

  .show-call-button {
    transform: translateX(0%);
  }

  .install-button-ctav2 {
    width: 10 * $video-overlay-styles.base-size;

    .tab {
      width: 10 * $video-overlay-styles.base-size;
    }

    .download-wrapper {
      $video-overlay-styles-download-element-height = $video-overlay-styles.base-size * 1.7;
      $video-overlay-styles-download-element-margin = $video-overlay-styles.base-size * .3;
      $endscreen-default-size = unit(($default-px-size / 24), "em");
      $scale-size = $default-scale-size;

      .download-container {
        left: $video-overlay-styles-download-element-height + 18 * $video-overlay-styles-download-element-margin;
        text-transform: uppercase;
        width: $video-overlay-styles.base-size * 2.5;
        border-radius: $video-overlay-styles-download-element-height;
        font-weight: 2;
      }

      .game-title-text {
        position: absolute;
        display: inline;
        overflow: hidden;
        width: 9 * $video-overlay-styles.base-size;
        text-overflow: ellipsis;
        text-shadow: none;
        white-space: nowrap;
        font-size: 50%;
      }

      .game-title {
        position: absolute;
        top: 5px;
        left: $video-overlay-styles-download-element-height + 2 * $video-overlay-styles-download-element-margin;
        display: inline-block;
        width: 4.5 * $video-overlay-styles.base-size;
        line-height: 1;

        .game-rating {
          position: relative;
          top: $video-overlay-styles-download-element-margin * .9;
          left: 0;
          display: inline-block;
          $game-rating-default($scale-size);
          margin-top: 2 * $endscreen-default-size;
          letter-spacing: 0;
          font-size: .8 * $endscreen-default-size;
        }

        .game-rating-stars-top {
          $game-rating-mask-default($scale-size);
          position: absolute;
          left: 0;
          z-index: 1;
        }

        .game-rating-stars-bottom {
          z-index: 0;
        }

        .game-rating-count {
          $game-rating-count-default($scale-size);
          font-size: .5 * $endscreen-default-size;
        }
      }
    }
  }

  &.show-gdpr-banner {
    .bottom-container-ctav2 {
      height: $video-overlay-styles.touchable-area-height * 3;

      .left-corner, .right-corner {
        bottom: 1.8em;
      }
    }
  }
}

